# Galatic_Inc_Alpha

./: CMakeLists.txt  README.md
assets/: assets.txt
createdLevels/: BoxStressTest.txt  MercuryIsh.txt  Stress Test.txt  TestMoveAbles.txt  VenusTestWorld.txt  adsa.txt
dependencies/imgui/: CMakeLists.txt
include/: Action.hpp  Animation.hpp  Assets.hpp  Components.hpp  Entity.hpp  EntityManager.hpp  GameEngine.h  Physics.hpp  Scene.h  Scene_Create.h  Scene_Menu.h  Scene_Play.h  Utilis.hpp  Vec2.hpp
levels/: Earth.txt  Jupiter.txt  Mars.txt  Mercury.txt  Saturn.txt  Tutorial Level.txt  Venus.txt
src/: GameEngine.cpp  Scene.cpp  Scene_Create.cpp  Scene_Menu.cpp  Scene_Play.cpp  imgui.ini  main.cpp
